# treba

./: .gitignore  Makefile  README.md  SKILL.md  pyproject.toml  treba.c  treba_cuda.cu
docs/: PYTHON_API_DRAFT.md
notebooks/: 01_treba_py_quickstart.ipynb  01_treba_py_quickstart.py  02_pautomac_mini_workflow.ipynb  02_pautomac_mini_workflow.py
scripts/: pautomac_battery.py  pautomac_battery_presets.json  pautomac_eval.py  treba_wrapper.py
treba_py/: __init__.py  base.py  config.py  encoding.py  exceptions.py  model_io.py  models.py  runner.py  types.py  viz.py
